<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_title"/>
    
        <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:title=""
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/item1"
                android:title="@string/action_new"/>
            <item
                android:id="@+id/item2"
                android:title="@string/action_delete"/>
            <item
                android:id="@+id/item3"
                android:title="@string/action_add_examples"/>
        </menu>
    </item>

</menu>