<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/general_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/general_product_name_hint"
            android:inputType="textPersonName" />


        <Spinner
            android:id="@+id/cat_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="100" />

<!--         <Button
            android:id="@+id/cat_add_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:text="@string/action_new"
            android:textColor="@color/white" /> -->

        <EditText
            android:id="@+id/quantity_input"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="4"
            android:hint="@string/quantity"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/unit_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10" />

<!--         <Button
            android:id="@+id/unit_add_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:text="@string/action_new"
            android:textColor="@color/white" /> -->

        <EditText
            android:id="@+id/price_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="numberDecimal" />

<!--         <Button
            android:id="@+id/calculate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/my_button"
            android:onClick="onCalculateButtonClick"
            android:text="@string/calculate"
            android:textColor="@color/white" /> -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_price"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/unit_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/price_value"
            android:textAppearance="?android:attr/textAppearanceLarge" />

<!--         <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/fiord2"
            android:textColor="@color/white" /> -->

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:onClick="onCancelButtonClick"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:onClick="onSaveButtonClick"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>