<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_centerVertical="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_3" />

    <ImageButton
        android:id="@+id/action_more"
        android:layout_width="24dip"
        android:layout_height="24dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_services1"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/secondLine"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/icon"
        android:singleLine="true"
        android:text="@string/price"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/secondLine"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/title_products"
        android:textSize="16sp" />

</RelativeLayout>